<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98D8F4"
    tools:context=".view.fragments.SecondFragment">

    <ImageView
        android:id="@+id/carrinho"
        android:layout_width="40dp"
        android:layout_height="53dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/carrinho" />

    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="#010E55"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toEndOf="@+id/carrinho"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq"
        android:textColor="#F6EFEF"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowRadius="1"
        android:shadowColor="#DC7F9F"
        android:shadowDx="5"
        android:shadowDy="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toEndOf="@+id/carrinho"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/r2"
        android:layout_width="394dp"
        android:layout_height="82dp"
        android:fontFamily="serif"
        android:padding="15dp"
        android:text="@string/re2"
        android:textAlignment="textStart"
        android:textColor="#010E55"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r1"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/r1"
        android:layout_width="399dp"
        android:layout_height="99dp"
        android:fontFamily="serif"
        android:padding="15dp"
        android:text="@string/re1"
        android:textAlignment="textStart"
        android:textColor="#010E55"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faq"
        app:layout_constraintVertical_bias="0.311" />

    <TextView
        android:id="@+id/p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/pe2"
        android:textColor="#F6EFEF"
        android:textSize="25sp"
        android:shadowRadius="1"
        android:shadowColor="#DC7F9F"
        android:shadowDx="3"
        android:shadowDy="1"
        app:layout_constraintBottom_toTopOf="@+id/r2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r1"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/pe1"
        android:textColor="#F6EFEF"
        android:textSize="25sp"
        android:shadowRadius="1"
        android:shadowColor="#DC7F9F"
        android:shadowDx="3"
        android:shadowDy="1"
        app:layout_constraintBottom_toTopOf="@+id/r1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faq"
        app:layout_constraintVertical_bias="0.601" />


    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />


</androidx.constraintlayout.widget.ConstraintLayout>