<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#98D8F4"
        tools:context=".view.ListaActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_produtos"
            android:layout_width="411dp"
            android:layout_height="549dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516" />

        <TextView
            android:id="@+id/tituloLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lista"
            android:textStyle="bold"
            android:textColor="#F6EFEF"
            android:shadowRadius="1"
            android:shadowColor="#DC7F9F"
            android:shadowDx="5"
            android:shadowDy="5"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/recyclerView_produtos"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="411dp"
            android:layout_height="53dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView_produtos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/comprarButton"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/comprar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/advanceButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_produtos"
            app:layout_constraintVertical_bias="0.518" />

        <Button
            android:id="@+id/advanceButton"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/comprarButton"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_produtos"
            app:layout_constraintVertical_bias="0.518" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>